--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.1.0",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "craco-alias": "^3.0.1"
   }
 }
